--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<H1>入会申し込み</H1>
-<p>入会するには、次のフォームに必要事項をご記入ください</p>
-<p>メールアドレス：<input type="email" name ="mymail"></p>
-<p>パスワード：<input type="password" name="mypassword"></p>
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charaset ="UTF-8">
+        <meta name ="viewport" content="width=device-width">
+        <title>入会申し込み</title>
+    </head>
+    <body>
+        <H1>入会申し込み</H1>
+        <p>入会するには、次のフォームに必要事項をご記入ください</p>
+        <p>メールアドレス：<input type="email" name ="mymail"></p>
+        <p>パスワード：<input type="password" name="mypassword"></p>
+        <p><button type="submit">登録する</button></p>
+    </body>
+</html>
