--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <meta charaset ="UTF-8">
         <meta name ="viewport" content="width=device-width">
         <title>入会申し込み</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <H1>入会申し込み</H1>
-        <p>入会するには、次のフォームに必要事項をご記入ください</p>
-        <p>メールアドレス：<input type="email" name ="mymail"></p>
-        <p>パスワード：<input type="password" name="mypassword"></p>
-        <p><button type="submit">登録する</button></p>
+        <div class="content">
+            <H1>入会申し込み</H1>
+            <p>入会するには、次のフォームに必要事項をご記入ください</p>
+            <p><label>メールアドレス</label><input type="email" name ="mymail"></p>
+            <p>パスワード：<input type="password" name="mypassword"></p>
+            <p><button type="submit">登録する</button></p>
+        </div>
     </body>
 </html>
