--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <div class="content">
             <H1>入会申し込み</H1>
             <p>入会するには、次のフォームに必要事項をご記入ください</p>
-            <p><label>メールアドレス</label><input type="email" name ="mymail"></p>
-            <p>パスワード：<input type="password" name="mypassword"></p>
+            <p><label for="mymail">メールアドレス<span class="required">必須</span></label><input id="mymail" type="email" name ="mymail"></p>
+            <p><label for="mypassword">パスワード<span class="required">必須</span></label><input id="mypassword" type="password" name="mypassword"></p>
             <p><button type="submit">登録する</button></p>
         </div>
     </body>
