--- a/section3/index.html
+++ b/section3/index.html
@@ -8,11 +8,14 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <h1>COCOA</h1>
-        </header>
-        <section>
-            <h1>イヤホンジャックの向こう側</h1>
-        </section>
+        <div class="container">
+            <header>
+                <h1>COCOA</h1>
+            </header>
+            <section>
+                <h1>イヤホンジャックの向こう側</h1>
+                <img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真">
+            </section>
+        </div>
     </body>
 </html>
