--- a/section4/index.html
+++ b/section4/index.html
@@ -15,6 +15,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: flex-start;
+            align-items: flex-start;
             
         }
     </style>
