--- a/section5/index.html
+++ b/section5/index.html
@@ -23,11 +23,31 @@
         </header>
     </div>
     <hr>
+    <div class="container">
+        <form section="" method="post" class="row">
+            <div class="col-sm-8 offset-sm-2">
+                <p>この度は、本書をご利用いただきありがとうございます。恐れ入りますが、以下のフォームにご記入いただき、送信いただけると幸いです。</p>
+                <div class="form-group">
+                    <label for="name">お名前</label>
+                    <input type="text" id="name" name="name" class="form-control" placeholder="例）山田　太郎">
+                </div>
+                <div class="form-group">
+                    <label for="job">ご職業</label>
+                    <select id="job" name="job" class="form-control">
+                        <option value="">選択してください</option>
+                        <option value="会社員">会社員</option>
+                        <option value="学生">学生</option>
+                        <option value="その他">その他</option>
+                    </select>
+                </div>
+            </div>
+        </form>
+    </div>
     <hr>
     <div class="container">
         <footer>
             <p>&copy; ともすた</p>
         </footer>
-    </div>
+    </div>  
 </body>
 </html>
