--- a/section5/index.html
+++ b/section5/index.html
@@ -28,8 +28,8 @@
             <div class="col-sm-8 offset-sm-2">
                 <p>この度は、本書をご利用いただきありがとうございます。恐れ入りますが、以下のフォームにご記入いただき、送信いただけると幸いです。</p>
                 <div class="form-group">
-                    <label for="name">お名前</label>
-                    <input type="text" id="name" name="name" class="form-control" placeholder="例）山田　太郎">
+                    <label for="name">お名前<span class="badge badge-danger">必須</span></label>
+                    <input type="text" id="name" name="name" class="form-control" placeholder="例）山田　太郎" required>
                 </div>
                 <div class="form-group">
                     <label for="job">ご職業</label>
@@ -74,6 +74,11 @@
                         <label for="q2_4" class="form-check-label">回答しない</label>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label for="message">ご意見</label>
+                    <textarea name="message" id="message" rows="10" class="form-control"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">送信する</button>
             </div>
         </form>
     </div>
