--- a/section8/index.html
+++ b/section8/index.html
@@ -17,7 +17,11 @@
         <h1>TODAY</h1>
     </header>
     <div class="container">
-        <p class="date">20xx/01/23</p>
+        <script>
+            const today=new Date();
+            const todayHTML = today.getFullYear() + '/'+(today.getMonth()+1)+'/'+today.getDate();
+            document.write('<p class="date">'+todayHTML+'</p>');
+        </script>
     </div>
 </body>
 </html>
