git commit -m "css更新"

--- a/section10/index.html
+++ b/section10/index.html
@@ -19,5 +19,20 @@
             </div>
         </div>
     </div>
+    <script>
+        let images =[
+            {
+                "path":"img/img01.jpeg",
+                "name":"name01",
+                "caption":"コメント１"
+            },
+            {
+                "path":"img/img02.jpeg",
+                "name":"name02",
+                "caption":"コメント2"
+            }
+        ]
+        alert(images[0].caption);
+    </script>
 </body>
 </html>
