--- a/section10/index.html
+++ b/section10/index.html
@@ -13,10 +13,10 @@
     </header>
     <div class="container">
         <div id="img_unit">
-            <div class="photo">
+            <!-- <div class="photo">
                 <img src="img/img01.jpeg">
                 <div class="inner"><p>コメント１<span>nickname</span></p></div>
-            </div>
+            </div> -->
         </div>
     </div>
     <script>
@@ -32,7 +32,21 @@
                 "caption":"コメント2"
             }
         ]
-        alert(images[0].caption);
+        
+            let img=document.createElement('img');
+            img.setAttribute('src',images[0].path);
+
+            let caption =document.createElement('div');
+            caption.className='inner';
+            caption.innerHTML='<p>' + images[0].caption + '<span>' + images[0].name + '</span></p>';
+
+            let div =document.createElement('div');
+            div.className='photo';
+            div.appendChild(img);
+            div.appendChild(caption);
+
+            document.getElementById('img_unit').appendChild(div);
+
     </script>
 </body>
 </html>
